provide: clean up WebService